# cred

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
notebooks/: learning.ipynb
src/: config.py
