[project]
name = "cred"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
